--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -1,74 +1,78 @@
-/*body {*/
-/*    margin: 0;*/
-/*    font-family: Arial, Helvetica, sans-serif;*/
-/*}*/
-
-/*.topnav {*/
-/*    background-color: #333;*/
-/*    overflow: hidden;*/
-/*}*/
-
-/*.topnav a {*/
-/*    float: left;*/
-/*    color: #f2f2f2;*/
-/*    text-align: center;*/
-/*    padding: 14px 16px;*/
-/*    text-decoration: none;*/
-/*    font-size: 17px;*/
-/*}*/
-
-/*.topnav a:hover {*/
-/*    background-color: #ddd;*/
-/*    color: black;*/
-/*}*/
-
-/*.topnav a.split {*/
-/*    float: right;*/
-/*    background-color: #333;*/
-/*    color: white;*/
-/*}*/
-
-/*.topnav a.split:hover {*/
-/*    background-color: #ddd;*/
-/*    color: black;*/
-/*}*/
-
 body {
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
 }
 
-.navigation {
-    background-color: black;
-    overflow: hidden;
+/* Navbar container */
+.navbar {
+  overflow: hidden;
+  background-color: black;
+  font-family: Arial, sans-serif;
 }
 
-.navigation a {
-    text-decoration: none;
-    color: white;
-    font-size: 20px;
-    padding: 14px 25px;
+/* Links inside the navbar */
+.navbar a {
+  float: left;
+  font-size: 20px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
 }
 
-.navigation a.left {
-    float: left;
+/* The dropdown container */
+.dropdown {
+  float: right;
+  overflow: hidden;
+  margin-right: 60px;
 }
 
-.navigation a.right {
-    float: right;
+/* Dropdown button */
+.dropdown .dropbtn {
+  font-size: 20px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit; /* Important for vertical align on mobile phones */
+  margin: 0; /* Important for vertical align on mobile phones */
 }
 
-.navigation a.left:hover {
-    background-color: #ad9b9b;
-    color: black;
+/* Add a red background color to navbar links on hover */
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: red;
 }
 
-.navigation a.right:hover {
-    background-color: #a69797;
-    color: black;
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  z-index: 1;
 }
 
-.register {
-    background-image: url("../images/peakpx (4).jpg");
-    background-size: cover;
+/* Links inside the dropdown */
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.navbar a.right {
+  float: right;
 }
